refactor: 이름에 대한 validateNotNull 메서드와 trim의 책임을 InputView로 이동